Fix alignment of the images in im-auter to center; Remove backtotop from media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,7 +549,7 @@ input:focus {
     }
 
     .im-outer {
-        width: 100%;
+        width: auto;
     }
 
     .two-columns {
